# walk_robot

./: CMakeLists.txt  LICENSE.txt  package.xml  readme.md
include/walk_robot/: walkRobot.hpp
launch/: walk_robot.launch
results/: cppcheckOutput.txt  cpplintOutput.txt
src/: main.cpp  walkRobot.cpp
world/: map
